[package]
name = "sero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.17", features = ["v1_26"] }
kube = { version = "0.80", features = ["runtime", "derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
